--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "express": "^4.16.4",
     "mongoose": "^5.12.3",
     "nodemon": "^2.0.7"
+  },
+  "devDependencies": {
+    "react-router-dom": "^5.2.0"
   }
 }
