--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "mongoose": "^5.12.3",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "react-slideshow-image": "^3.4.6",
+    "router": "^1.3.5"
   },
   "devDependencies": {
     "react-router-dom": "^5.2.0"
