--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "client-install": "npm install --prefix client",
+    "client-install": "npm install --prefix ../client",
     "start": "node index.js",
-    "server": "nodemon index.js",
-    "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "server": "../node_modules/.bin/nodemon index.js",
+    "client": "npm start --prefix ../client",
+    "dev": "../node_modules/.bin/concurrently \\\"npm run server\\\" \\\"npm run client\\\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -21,6 +21,8 @@
     "express": "^4.16.4",
     "mongoose": "^5.12.3",
     "nodemon": "^2.0.7",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "react-slideshow-image": "^3.4.6",
     "router": "^1.3.5"
   },
