--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "start": "node index.js",
     "server": "../node_modules/.bin/nodemon index.js",
     "client": "npm start --prefix ../client",
-    "dev": "../node_modules/.bin/concurrently \\\"npm run server\\\" \\\"npm run client\\\"",
+    "dev": "../node_modules/.bin/concurrently \"npm run server\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
