--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "client-install": "npm install --prefix ../client",
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "server": "../node_modules/.bin/nodemon index.js",
     "client": "npm start --prefix ../client",
     "dev": "../node_modules/.bin/concurrently \"npm run server\" \"npm run client\"",
@@ -18,7 +18,9 @@
     "bcrypt": "^5.0.1",
     "concurrently": "^6.2.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
