--- a/mongodb/Dockerfile
+++ b/mongodb/Dockerfile
@@ -90,7 +90,7 @@ RUN mkdir -p /data/db /data/configdb \
 	&& chown -R mongodb:mongodb /data/db /data/configdb
 
 # MODIFICHE INTRODOTTE DA VITTORIO GHINI PER ASW E SYSTEMS INTEGRATION
-# VOLUME /data/db /data/configdb
+VOLUME /data/db /data/configdb
 # COPY ./mydbinit.js /docker-entrypoint-initdb.d/
 # per avere strumenti di debugging dentro ai container
 RUN	apt-get update 						&&	\
