--- a/server/client/package.json
+++ b/server/client/package.json
@@ -12,10 +12,10 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "export PORT=5000 && react-scripts start",
+    "build": "export PORT=5000 && react-scripts build",
+    "test":  "export PORT=5000 && react-scripts test",
+    "eject": "export PORT=5000 && react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
