--- a/server/package.json
+++ b/server/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
     "react-slideshow-image": "^3.4.6",
-    "router": "^1.3.5"
+    "router": "^1.3.5",
+    "sharp": "^0.28.3"
   },
   "devDependencies": {
     "axios": "^0.21.1",
