--- a/server/client/package.json
+++ b/server/client/package.json
@@ -8,13 +8,14 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-notify-toast": "^0.5.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "export PORT=5000 && react-scripts start",
     "build": "export PORT=5000 && react-scripts build",
-    "test":  "export PORT=5000 && react-scripts test",
+    "test": "export PORT=5000 && react-scripts test",
     "eject": "export PORT=5000 && react-scripts eject"
   },
   "eslintConfig": {
