--- a/server/client/package.json
+++ b/server/client/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.2",
     "react-notify-toast": "^0.5.1",
     "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
