--- a/server/client/package.json
+++ b/server/client/package.json
@@ -10,8 +10,10 @@
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-notify-toast": "^0.5.1",
+    "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
+    "redux": "^4.1.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
