--- a/server/client/package.json
+++ b/server/client/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^4.6.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-google-places-autocomplete": "^3.3.1",
     "react-notify-toast": "^0.5.1",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
