--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "react-scripts": "^4.0.3",
     "react-slideshow-image": "^3.4.6",
     "router": "^1.3.5",
+    "seedrandom": "^3.0.5",
     "sharp": "^0.28.3"
   },
   "devDependencies": {
