--- a/server/client/package.json
+++ b/server/client/package.json
@@ -19,7 +19,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "export PORT=5000 && react-scripts start",
+    "start": "export PORT=5000 && HTTPS=true && react-scripts start",
     "build": "export PORT=5000 && react-scripts build",
     "test": "export PORT=5000 && react-scripts test",
     "eject": "export PORT=5000 && react-scripts eject"
