--- a/server/client/package.json
+++ b/server/client/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
     "redux": "^4.1.0",
+    "rumble-charts": "^3.1.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
