--- a/server/client/package.json
+++ b/server/client/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "proptypes": "^1.1.0",
     "react": "^17.0.2",
@@ -14,6 +15,7 @@
     "react-google-places-autocomplete": "^3.3.1",
     "react-notify-toast": "^0.5.1",
     "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
     "redux": "^4.1.0",
