--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -7,5 +7,6 @@ COPY package.json /app
 RUN npm install
 
 COPY . /app
-
-CMD ["npm", "run", "start"]
+RUN export PORT=5000
+RUN HTTPS=true
+CMD ["react-script", "start"]
