--- a/server/client/package.json
+++ b/server/client/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-google-places-autocomplete": "^3.3.1",
     "react-notify-toast": "^0.5.1",
+    "react-places-autocomplete": "^7.3.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
