--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "node-geocoder": "^3.27.0",
     "nodemailer": "^6.6.1",
     "nodemon": "^2.0.7",
+    "react-charts": "^2.0.0-beta.7",
     "seedrandom": "^3.0.5",
     "sharp": "^0.28.3"
   }
