--- a/server/client/package.json
+++ b/server/client/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-google-places-autocomplete": "^3.3.1",
+    "react-loading": "^2.0.3",
     "react-notify-toast": "^0.5.1",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "^7.2.4",
