--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -6,6 +6,7 @@ COPY package.json /app
 
 RUN npm install
 
+COPY images/default-user-image.jpg /app/images/
 COPY . /app
 RUN export PORT=5000
 RUN HTTPS=true
