--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -6,8 +6,11 @@ COPY package.json /app
 
 RUN npm install
 
-COPY images/default-user-image.jpg /app/images/
+COPY default-user-image.jpg /app/images/
+COPY images/* /app/images/
+
 COPY . /app
+
 RUN export PORT=5000
 RUN HTTPS=true
 CMD ["node", "index.js"]
